Create Reasoning prompts

--- a/ml_1m/ml_1m/finetune_reasoning_rec/reasoning_dataset/create_reasoning_prompts.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/reasoning_dataset/create_reasoning_prompts.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d7860cc4-b347-4b97-89fd-57cad5f272db",
    "metadata": {},
    "outputs": [],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "3cd5f401-718d-4c50-902a-fdd530245f63",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,6 @@
       "\n",
       "   User watched the following movies recently in the given order. List of recent movies and their description -\n",
       "    \n",
-      "Disliked Last Man Standing (Genre: Action,Drama,Western) \"Last Man Standing is a gritty and action-packed western thriller, starring Bruce Willis as a lone gunman caught in a deadly gang war.\",\n",
       "Liked Juror, The (Genre: Drama,Thriller) A gripping courtroom drama where a juror, played by Demi Moore, fights against the odds to uncover the truth and save an innocent man.,\n",
       "Liked Walk in the Clouds, A (Genre: Drama,Romance) A romantic drama set in post-WWII California, where a soldier pretends to be a married man to help a pregnant woman and falls in love with her.,\n",
       "Liked Sommersby (Genre: Drama,Mystery,Romance) \"Sommersby\" is a captivating drama set in post-Civil War America, exploring identity, love, and redemption through a man's return from the dead.,\n",
@@ -577,23 +576,25 @@
       "Liked Preacher's Wife, The (Genre: Drama) A heartwarming and uplifting film about a preacher who receives divine intervention in the form of an angel to help save his struggling church and marriage.,\n",
       "Liked Indecent Proposal (Genre: Drama) Indecent Proposal (1993) is a provocative drama about a wealthy man who offers a young couple one million dollars for a night with the wife.,\n",
       "Liked 200 Cigarettes (Genre: Comedy,Drama) \"200 Cigarettes is a comedic ensemble film set on New Year's Eve in 1981, following various characters navigating love and partying in New York City.\",\n",
+      "Disliked Showgirls (Genre: Drama) \"Showgirls\" (1995) is a controversial and over-the-top drama about a young woman's rise to fame in the world of Las Vegas showgirls.\n",
+      "\n",
       "    Analyze all the information given in order. Do not use any information not mentioned above. Summarize the user profile and user's behavior from the given list of movies and identify the movie characteristics that he likes and dislikes.\n",
-      "    The user disliked the next movie Showgirls (Genre: Drama) \"Showgirls\" (1995) is a controversial and over-the-top drama about a young woman's rise to fame in the world of Las Vegas showgirls. As an expert movie critic, analyze the user behavior, movie watching history and provide a step-by-step reasoning why the user disliked Showgirls  and explain your reasoning in atmost 200 words.\n",
+      "    The user disliked the next movie Free Willy (Genre: Adventure,Children's,Drama) \"Free Willy (1993) is a heartwarming family film about a troubled boy who befriends a captive orca and helps him find freedom.\" As an expert movie critic, analyze the user behavior, movie watching history and provide a step-by-step reasoning why the user disliked Free Willy  and explain your reasoning in atmost 200 words.\n",
       "****************************************************************************************************\n",
-      "Based on the user's movie preferences and recent viewing history, it is evident that the user has a clear preference for classic and iconic films, particularly in the genres of adventure, sci-fi, historical dramas, and movies with a strong emotional core. The user tends to enjoy gripping dramas, thrillers, and heartwarming comedies, while being less interested in contemporary action films and romantic dramas.\n",
+      "Based on the user's movie preferences and recent watch history, we can summarize the user profile as a male scientist between 25 to 34 years of age who has a clear preference for classic and iconic films, particularly in the adventure, sci-fi, and historical drama genres. The user enjoys movies with a strong emotional core and may not be as interested in contemporary action films or romantic dramas.\n",
       "\n",
-      "The user's dislike of Showgirls can be attributed to several factors. Firstly, Showgirls is known for its controversial and over-the-top portrayal of the world of Las Vegas showgirls, which may not align with the user's preference for classic and iconic films with a strong emotional core. Additionally, the user has shown a dislike for more contemporary dramas and may not appreciate the exaggerated and sensationalized nature of Showgirls.\n",
+      "The user's liked movies tend to be gripping dramas with elements of mystery, romance, and thriller, such as \"The Juror\" and \"The General's Daughter.\" They also appreciate thought-provoking films like \"Powder\" and \"Instinct.\" On the other hand, the user dislikes movies that may not align with their preferences, such as dark comedies like \"Your Friends and Neighbors\" and controversial dramas like \"Showgirls.\"\n",
       "\n",
-      "Overall, the user's movie preferences suggest a taste for well-crafted and emotionally resonant films, which may not be fulfilled by the exaggerated and controversial nature of Showgirls.\n"
+      "Given this profile, it is likely that the user disliked \"Free Willy\" because it is a heartwarming family film in the adventure and drama genres, which may not align with their preference for more intense and emotionally engaging films. The lack of mystery, thriller elements, and the focus on a troubled boy befriending an orca may not have resonated with the user's taste for classic and iconic films with a strong emotional core.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "156"
+       "201"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
