creating reasoning dataset

--- a/ml_1m/ml_1m/finetune_reasoning_rec/reasoning_dataset/test_outputs.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/reasoning_dataset/test_outputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313.875\n"
+      "170.125\n"
      ]
     }
    ],
@@ -43,22 +43,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The user is a female k-12 student under 18 years of age with a diverse taste in movies, but with a preference for thought-provoking and emotionally engaging films. They enjoy dramas that explore complex themes such as mental illness, racial injustice, and the meaning of life. The user also has a soft spot for classic Disney films, as evidenced by their fondness for Cinderella. They appreciate the enchanting storytelling and timeless charm of these animated tales.\\n\\n    Based on the user's movie watching history, they have shown a clear preference for animated films, with 15 out of 20 movies being animated. They have also shown a preference for Disney films, with 8 out of 20 movies being Disney films. The user has also shown a preference for films with strong storytelling and character development, as seen in their appreciation for films like Ferris Bueller's Day Off, Pleasantville, and Schindler's List.\\n\\n    Given the user's movie watching history and preferences, it is highly likely that they will enjoy Mulan. The film is an animated Disney film that tells the empowering story of a young Chinese woman who disguises herself as a man to fight in the army. This film checks all the boxes for the user's preferences, as it is an animated film, a Disney film, and has a strong storyline with a female lead character. Additionally, the film explores themes of identity, courage, and family, which are all themes that the user has shown an interest in.\\n\\n    Overall, based on the user's movie watching history and preferences, Mulan is a film that is highly likely to resonate with the user. The film's strong storytelling, character development, and themes of identity and courage are all characteristics that the user has shown a preference for in the past. Therefore, it is highly recommended that the user watch Mulan.\""
+       "dict_keys([1, 10, 100, 1000, 1001, 1002, 1003, 1004, 1005, 1006, 1007, 1008, 1009, 101, 1010, 1011])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_reasoning_dict[1]"
+    "train_reasoning_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n    Based on the user's movie preferences, it is clear that they enjoy movies that are well-crafted, engaging, and thought-provoking, with a wide range of genres spanning from science fiction and fantasy to drama, comedy, and action. They appreciate movies that are epic in scope, with complex characters, intricate plots, and high stakes. The user's favorite movies often feature themes of redemption, unity, and the triumph of the human spirit, and they are drawn to stories that explore the depths of human emotion and the complexities of the human condition.\\n\\n    The user's recent movie watching history shows a clear preference for movies with fantastical elements, including science fiction, animation, and magical realism. They have enjoyed movies such as Akira, Excalibur, Time Bandits, Willy Wonka and the Chocolate Factory, Big, E.T. the Extra-Terrestrial, The 7th Voyage of Sinbad, Beetlejuice, Star Wars: Episode IV - A New Hope, Splash, 20,000 Leagues Under the Sea, Willow, Dark Crystal, Indian in the Cup\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_reasoning_dict[1011]"
    ]
   },
   {
