--- a/ml_1m/ml_1m/finetune_reasoning_rec/reasoning_dataset/test_outputs.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/reasoning_dataset/test_outputs.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "167.0\n"
+      "168.375\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "dict_keys([1, 10, 100, 1000, 1001, 1002, 1003, 1004])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,22 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nSummary of user behavior and movie preferences:\\n\\nThe user has a strong preference for complex, thought-provoking films with character-driven dramas and intricate human relationships. They enjoy movies that challenge societal norms and explore personal growth, as well as classic films and those that showcase the power of music and youth. The user dislikes lighthearted comedies and action films that prioritize humor or spectacle over character development and storytelling.\\n\\nExplanation for why the user will like Wonder Boys:\\n\\nWonder Boys features a struggling writer navigating personal and professional crises, which aligns with the user's preference for complex, character-driven dramas. The film's introspective nature and stellar performances from its ensemble cast will likely appeal to the user's appreciation for thought-provoking themes and compelling storytelling. Additionally, the film's focus on personal growth and relationships may resonate with the user's interest in exploring societal norms and human intricacies.\""
+       "\"\\nSummary of user behavior and movie characteristics:\\nThe user enjoys a wide range of genres, including romantic adventures, historical epics, war films, post-apocalyptic action, animation, and thought-provoking dramas. They tend to avoid horror and suspense genres, favoring movies that are inspiring, thrilling, and thought-provoking. The user's preferred movies often contain humor, memorable characters, and unique storylines. They dislike movies that evoke fear or anxiety, as well as those that are lackluster or predictable.\\n\\nReasoning for disliking Home Alone 2: Lost in New York:\\nBased on the user's movie preferences, they are likely to dislike Home Alone 2: Lost in New York due to its lack of originality and predictable plot. The user tends to avoid movies that are lackluster or uninspiring, and this sequel may not offer the unique storylines and memorable characters they typically enjoy. Additionally, the user's dislike for horror and suspense genres suggests that they may not appreciate the slapstick humor and physical comedy present in the film, which could be perceived as evoking fear or anxiety\\nPrediction: No\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_reasoning_dict[1001]"
+    "train_reasoning_dict[1004]"
    ]
   },
   {
