Test Reasoning dataset - 1880

--- a/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "base_model = \"meta-llama/Llama-2-7b-chat-hf\"\n",
     "device_map = 'auto'\n",
-    "max_memory_mapping = {0: \"23GiB\", 1: \"10GiB\"}"
+    "max_memory_mapping = {0: \"23GiB\", 1: \"23GiB\"}"
    ]
   },
   {
@@ -40,7 +40,10 @@
     }
    ],
    "source": [
-    "tokenizer = LlamaTokenizer.from_pretrained(base_model,                                          \n",
+    "tokenizer = LlamaTokenizer.from_pretrained(base_model,\n",
+    "                                           padding_side = \"left\",\n",
+    "                                           add_eos_token = True,\n",
+    "                                           add_bos_token = True,                                        \n",
     "                                           token = os.environ.get(\"HUGGINGFACE_ACCESS_TOKEN\"),\n",
     ")\n",
     "tokenizer.add_special_tokens({\"pad_token\":\"<pad>\"})"
@@ -71,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d49695719f704bda9b5d565e6214cfd7",
+       "model_id": "2a29da1d298a4d909a47e4c3c448e3cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input_ids': tensor([[    1, 18637, 29892,  ..., 32000, 32000, 32000],\n",
-       "        [    1,  9038,  2501,  ..., 32000, 32000, 32000],\n",
-       "        [    1, 13866,   338,  ...,  3782, 29889,     2]]), 'attention_mask': tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
-       "        [1, 1, 1,  ..., 0, 0, 0],\n",
+       "{'input_ids': tensor([[32000, 32000, 32000,  ...,   592, 29973,     2],\n",
+       "        [32000, 32000, 32000,  ...,  3069, 29871,     2],\n",
+       "        [    1, 13866,   338,  ..., 29889,     2,     2]]), 'attention_mask': tensor([[0, 0, 0,  ..., 1, 1, 1],\n",
+       "        [0, 0, 0,  ..., 1, 1, 1],\n",
        "        [1, 1, 1,  ..., 1, 1, 1]])}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/grads/m/mbismay/miniconda3/envs/mixtral/lib/python3.9/site-packages/transformers/generation/utils.py:1141: UserWarning: Input length of input_ids is 340, but `max_length` is set to 32. This can lead to unexpected behavior. You should consider increasing `max_new_tokens`.\n",
+      "/home/grads/m/mbismay/miniconda3/envs/mixtral/lib/python3.9/site-packages/transformers/generation/utils.py:1141: UserWarning: Input length of input_ids is 341, but `max_length` is set to 256. This can lead to unexpected behavior. You should consider increasing `max_new_tokens`.\n",
       "  warnings.warn(\n",
       "/home/grads/m/mbismay/miniconda3/envs/mixtral/lib/python3.9/site-packages/transformers/generation/utils.py:1413: UserWarning: You are calling .generate() with the `input_ids` being on a device type different than your model's device. `input_ids` is on cpu, whereas the model is on cuda. You may experience unexpected behaviors or slower generation. Please make sure that you have put `input_ids` to the correct device by calling for example input_ids = input_ids.to('cuda') before running `.generate()`.\n",
       "  warnings.warn(\n"
@@ -181,31 +184,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[    1, 18637, 29892,  ..., 32000, 32000,  4345],\n",
-      "        [    1,  9038,  2501,  ..., 32000, 32000,  4345],\n",
-      "        [    1, 13866,   338,  ..., 29889,     2,    13]])\n"
+      "tensor([[32000, 32000, 32000,  ..., 29973,     2,     1],\n",
+      "        [32000, 32000, 32000,  ..., 29871,     2,     1],\n",
+      "        [    1, 13866,   338,  ...,     2,     2,    13]])\n"
      ]
     }
    ],
    "source": [
-    "generate_ids = model.generate(inputs.input_ids, max_length=32)\n",
+    "generate_ids = model.generate(inputs.input_ids, max_length=256)\n",
     "print(generate_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hey, are you conscious? Can you talk to me?MS',\n",
-       " 'Once upon a time there was a ghost MS',\n",
+       "['Hey, are you conscious? Can you talk to me?',\n",
+       " 'Once upon a time there was a ghost ',\n",
        " 'Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\\n### Instruction:\\nGiven the user preference and unpreference, identify whether the user will like the target movie by answering \"Yes.\" or \"No.\".\\n\\n### Input:\\n\\nUser Preference: \"Twister (1996)\", \"Con Air (1997)\", \"River Wild, The (1994)\", \"13th Warrior, The (1999)\", \"Batman Returns (1992)\", \"From Dusk Till Dawn (1996)\", \"Young Guns II (1990)\", \"Demolition Man (1993)\", \"Mummy, The (1999)\", \"Eraser (1996)\", \"Substitute, The (1996)\", \"Maximum Risk (1996)\", \"Sudden Death (1995)\", \"Outbreak (1995)\", \"Dick Tracy (1990)\",\\nUser Unpreference:\"Cliffhanger (1993)\",\"Armageddon (1998)\",\"Mercury Rising (1998)\",\"U.S. Marshalls (1998)\",\"Shadow, The (1994)\",\\n Whether the user will like the target movie \"Rocketeer, The (1991)\\\\?\\n\\n### Response:\\nNo.\\n']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +228,32 @@
        "'</s>'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tokenizer.eos_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': tensor([[    1,   518, 25580, 29962,     2]]), 'attention_mask': tensor([[1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = [\"[INST]\"]\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\", padding = True)\n",
+    "print(inputs)"
    ]
   },
   {
