Experimenting with finetuning

--- a/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
@@ -730,10 +730,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.17045783996582 10000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "import time\n",
+    "import gc\n",
+    "gc.collect()\n",
+    "\n",
+    "start = time.time()\n",
+    "def rindex(lst, value):\n",
+    "    return len(lst) - operator.indexOf(reversed(lst), value) - 1\n",
+    "lst = [3]*10000000000\n",
+    "lst.extend([2,5,7,3,8,9])\n",
+    "val = 3\n",
+    "print(time.time()-start, rindex(lst, val))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_r_index(lst, val):\n",
+    "    n = len(lst)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.225440979003906e-05 23.025850929940457\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import log\n",
+    "\n",
+    "start = time.time()\n",
+    "x = log(10000000000)\n",
+    "print(time.time() - start, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "100 - 0.00024\n",
+    "1000 - 0.00011\n",
+    "100000 - 0.0043\n",
+    "1000000 - 0.0033\n",
+    "100000000 - 0.181\n",
+    "10000000000 - 16.06"
+   ]
   }
  ],
  "metadata": {
