Created prompts without User Profile - Valid Reasoning for 2400

--- a/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
@@ -18,11 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base_model = \"meta-llama/Llama-2-7b-chat-hf\"\n",
-    "llama_model = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
+    "base_model = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+    "# llama_model = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
     "\n",
     "device_map = 'auto'\n",
-    "max_memory_mapping = {2: \"23GiB\", 3: \"23GiB\"}"
+    "max_memory_mapping = {0: \"23GiB\", 1: \"23GiB\"}"
    ]
   },
   {
@@ -30,13 +30,6 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -49,7 +42,7 @@
     }
    ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(llama_model,\n",
+    "tokenizer = LlamaTokenizer.from_pretrained(base_model,\n",
     "                                           padding_side = \"left\",\n",
     "                                           add_eos_token = True,\n",
     "                                           add_bos_token = True,                                        \n",
@@ -67,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pad_token_id=128256\n"
+      "pad_token_id=32000\n"
      ]
     }
    ],
@@ -83,124 +76,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4878adf8661644f691dcc326f86d3ce1",
+       "model_id": "0b52a05d2d2b4be39e2c8cc38d75aafc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "config.json:   0%|          | 0.00/654 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ef94d0601f845dba0e68b525321195c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors.index.json:   0%|          | 0.00/23.9k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e202e2e07e8d45c5b25393ecb33cc1aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "941f8a8183ed484ebb9f1367184e7ec1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00001-of-00004.safetensors:   0%|          | 0.00/4.98G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "552bcaa4c9e545d5886a105195a0571e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00002-of-00004.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbb6e9a85db5417fac134bebb589aefe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00003-of-00004.safetensors:   0%|          | 0.00/4.92G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04b9c148f7f44e4781b9be3d0e4152cf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00004-of-00004.safetensors:   0%|          | 0.00/1.17G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef73629672954518959b10620c58c4c5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38fc56d75fb84b0f9e6ae98421c82be2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/136 [00:00<?, ?B/s]"
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -209,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "Embedding(128264, 4096)"
+       "Embedding(32008, 4096)"
       ]
      },
      "execution_count": 5,
@@ -218,8 +99,8 @@
     }
    ],
    "source": [
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "        llama_model,\n",
+    "model = LlamaForCausalLM.from_pretrained(\n",
+    "        base_model,\n",
     "        load_in_8bit=True,\n",
     "        torch_dtype=torch.float16,\n",
     "        device_map=device_map,\n",
@@ -237,7 +118,7 @@
     {
      "data": {
       "text/plain": [
-       "128000"
+       "32000"
       ]
      },
      "execution_count": 6,
@@ -500,41 +381,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input_ids': tensor([[    1,   518, 25580, 29962,     2]]), 'attention_mask': tensor([[1, 1, 1, 1, 1]])}\n"
+      "{'input_ids': tensor([[   1,  584, 3869,    2]]), 'attention_mask': tensor([[1, 1, 1, 1]])}\n"
      ]
     }
    ],
    "source": [
-    "prompt = [\"[INST]\"]\n",
+    "prompt = [': Yes']\n",
     "inputs = tokenizer(prompt, return_tensors=\"pt\", padding = True)\n",
     "print(inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['</s>']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtokenizer\u001b[49m\u001b[38;5;241m.\u001b[39mbatch_decode([\u001b[38;5;241m29901\u001b[39m, \u001b[38;5;241m3869\u001b[39m], skip_special_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, clean_up_tokenization_spaces\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tokenizer' is not defined"
+     ]
     }
    ],
    "source": [
-    "tokenizer.batch_decode([2], skip_special_tokens=True, clean_up_tokenization_spaces=True)"
+    "tokenizer.batch_decode([29901, 3869], skip_special_tokens=True, clean_up_tokenization_spaces=False)"
    ]
   },
   {
