2400 test 4800 train 6400 valid data without profile

--- a/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
+++ b/ml_1m/ml_1m/finetune_reasoning_rec/testing.ipynb
@@ -683,6 +683,51 @@
     "100000000 - 0.181\n",
     "10000000000 - 16.06"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing Similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01322412]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [[1,1,1,1,1,1,1,1,1,1,1,1,1,2,3,4,7385,6221]]\n",
+    "l2 = [[1,1,1,1,1,1,1,1,1,1,1,1,22,1123,3,10,9,12]]\n",
+    "cosine_similarity(l1, l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
