SASRec baseline results

--- a/ml_1m/ml_1m/other_baselines/a_seq_rec_CTR/create_sasrec_ctr_data.ipynb
+++ b/ml_1m/ml_1m/other_baselines/a_seq_rec_CTR/create_sasrec_ctr_data.ipynb
@@ -367,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "66fa88a9-64d6-4463-a09e-ec5e45c4ddb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sasrec_train_dict = {\"user\": [],\"history_item_id\": [],\"history_rating\": [],\"item_id\": [],\"rating\": []}\n",
-    "sasrec_valid_dict = {\"user\": [],\"history_item_id\": [],\"history_rating\": [],\"item_id\": [],\"rating\": []}\n",
-    "sasrec_test_dict = {\"user\": [],\"history_item_id\": [],\"history_rating\": [],\"item_id\": [],\"rating\": []}\n",
+    "sasrec_train_dict = {\"user\": [],\"history_item_id\": [],\"history_rating\": [],\"item_id\": [],\"rating\": [], \"timestamp\": []}\n",
+    "sasrec_valid_dict = {\"user\": [],\"history_item_id\": [],\"history_rating\": [],\"item_id\": [],\"rating\": [], \"timestamp\": []}\n",
+    "sasrec_test_dict = {\"user\": [],\"history_item_id\": [],\"history_rating\": [],\"item_id\": [],\"rating\": [], \"timestamp\": []}\n",
     "user_list = list(user_train_dict.keys())\n",
     "\n",
     "cnt =  0\n",
@@ -408,6 +408,7 @@
     "    sasrec_train_dict['history_rating'].append(train_valid_test_ratings[-23:-3])\n",
     "    sasrec_train_dict['item_id'].append(train_valid_test_movies[-3])\n",
     "    sasrec_train_dict['rating'].append(train_valid_test_ratings[-3])\n",
+    "    sasrec_train_dict['timestamp'].append(0)\n",
     "\n",
     "    ### SASRec Valid Data\n",
     "    sasrec_valid_dict['user'].append(user)\n",
@@ -415,6 +416,7 @@
     "    sasrec_valid_dict['history_rating'].append(train_valid_test_ratings[-22:-2])\n",
     "    sasrec_valid_dict['item_id'].append(train_valid_test_movies[-2])\n",
     "    sasrec_valid_dict['rating'].append(train_valid_test_ratings[-2])\n",
+    "    sasrec_valid_dict['timestamp'].append(0)\n",
     "\n",
     "    ### SASRec Test Data\n",
     "    sasrec_test_dict['user'].append(user)\n",
@@ -422,14 +424,14 @@
     "    sasrec_test_dict['history_rating'].append(train_valid_test_ratings[-21:-1])\n",
     "    sasrec_test_dict['item_id'].append(train_valid_test_movies[-1])\n",
     "    sasrec_test_dict['rating'].append(train_valid_test_ratings[-1])\n",
-    "\n",
+    "    sasrec_test_dict['timestamp'].append(0)\n",
     "    # if cnt == 10:\n",
     "    #     break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "2d23e481-429b-4b3d-bb65-62de820adf8d",
    "metadata": {},
    "outputs": [
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "id": "d4ddde8d-dde0-4851-9b94-5f5917987d21",
    "metadata": {},
    "outputs": [],
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "id": "f8f37e53-c420-47fd-a55d-76aedf44e0d6",
    "metadata": {},
    "outputs": [
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "abfcfb7b-a3a1-4753-9e64-75492029449f",
    "metadata": {},
    "outputs": [
@@ -527,7 +529,7 @@
        "3706"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
